--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ ITS EVERYDAY BRUHH (or sis)<br>
 3. Do you watch anime?<br>
 Watashi wa weeb ja nai!<br>
 4. I'm not gay. Do you accept me?<br>
-I do and simultaneously don't behind your back.<br>
+I do and simultaneously don't behind my back.<br>
 5. I'm actually super duper gay~ ... Do you still accept me?<br>
 That's a new factoid.<br>
 6. War and violence and humanity in general is stupid. Do you agree or disagree?<br>
