--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Sinners, Aquilina<br>
 vii. What's a song you dislike?<br>
 Friday, RB<br>
 viii. Who's a person [famous] you love?<br>
-Siedrac, Charlotte<br>
+513****, Charlotte, Prof. ZMH, myself and mostly myself<br>
 ix. Who's a person [famous] you hate?<br>
 Mass shooters.<br>
 x. What is love? 420 000 000 word limit.<br>
